--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -149,7 +149,7 @@
                     <h4 class="heading">Mentions Légales</h4>
 
                     <p>L'AFADEC (Association de la Formation A Distance de l'Enseignement Catholique) administre
-                        cette plateforme, dont l'objectif est d'accompagner la formation au salon Excellence Pro</p>
+                        cette plateforme, dont l'objectif est d'accompagner la formation au salon Excellence Pro.</p>
 
                     <p>Les informations recueillies (nom, prénom, discipline, adresse mail, numéro de téléphone,
                         établissement) sont nécessaires pour votre inscription.</p>
