--- a/app/Resources/views/user/userFrontEnd.html.twig
+++ b/app/Resources/views/user/userFrontEnd.html.twig
@@ -204,6 +204,8 @@
                             <th>Nom</th>
                             <th>Type d'utilisateur</th>
                             <th>Établissement</th>
+                            <th>Commune</th>
+                            <th>Code postal</th>
                             <th>Numec</th>
                             <th>UAI</th>
                             <th>Téléphone</th>
@@ -233,6 +235,8 @@
                                     {% endif %}
                                 </td>
                                 <td>{{ myUser.nomEtabl }}</td>
+                                <td>{{ myUser.commune }}</td>
+                                <td>{{ myUser.codePost }}</td>
                                 <td>{{ myUser.numec }}</td>
                                 <td>{{ myUser.uai }}</td>
                                 <td>{{ myUser.phone }}</td>
